@@ -5,6 +5,8 @@ PHP                                                                        NEWS
 - Core:
   . Upgraded crypt_blowfish to version 1.3. (Leigh)
   . Fixed bug #68545 (NULL pointer dereference in unserialize.c). (Anatol)
+  . Fixed bug #68594 (Use after free vulnerability in unserialize()).
+    (Stefan Esser)
 
 13 Nov 2014 PHP 5.4.35
 
